[package]
name = "cdumay_error_yaml"
version = "0.1.8"
edition = "2024"
authors = ["Cédric Dumay <cedric.dumay@gmail.com>"]
description = "A Rust Library for YAML error"
documentation = "https://docs.rs/cdumay_error_yaml"
homepage = "https://github.com/cdumay/cdumay_error_yaml"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/cdumay/cdumay_error_yaml"

[dependencies]
serde_yaml = "0.9"
cdumay_core = "0.1"
serde-value = "0.7"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
